--- a/s.css
+++ b/s.css
@@ -6,6 +6,38 @@ body, html {
     font-family: Arial, sans-serif;
 }
 
+/*Stripe styles*/
+.stripe{
+    display: flex;
+    justify-content: center;
+    padding: 5px 0px;  
+    color: white; 
+    font-size: medium;
+    background-color: #296e9f;
+    text-align: center;
+}
+
+.stripe > ul {
+    margin: unset;
+    list-style:none;
+}
+
+.stripe > ul li{
+    display:inline-block; 
+    padding:0 30px; 
+    position:relative;
+}
+
+.stripe >ul li:not(:last-child)::after{
+    content:""; 
+    border:1px solid #e2e2e2;
+    border-width: 1px 1px 0 0;
+    position:absolute; 
+    right:-3px; 
+    top:0; 
+    height:100%;
+}
+
 /* Navbar styles */
 .navbar {
     background-color: #3085C3;
