--- a/s.css
+++ b/s.css
@@ -4,6 +4,7 @@ body, html {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
+    /* overflow-x: hidden; */
 }
 
 /*Stripe styles*/
